# BrowserAgent_v2

./: .gitignore  LICENSE  README.md  data_generate.py  data_generate_conclusion.py  data_generate_conclusion_continue.py  data_generate_debug.py  data_generate_filter.py  data_generate_rft.py  deploy_vllm.sh  judge_rft.py  judge_sft.py  match1000.py  remove_empty_lines.py  requirements.txt  run_model.py  run_model_mind.py  run_model_new.py  run_model_new_hug.py  run_model_nomemory.py  setup.py  start_tool_server_30810.sh  start_tool_server_30816.sh  swift_switch.py  sys_eval_prompt.txt  system_prompt_click_nourl.txt  system_prompt_with_history_info.txt  system_prompt_with_history_info_conclusion.txt  system_prompt_with_history_info_conclusion_v2.txt  system_prompt_with_history_info_goldpath.txt  test.py  val_answer.py  val_answer_context.py  val_answer_model.py  val_answer_model_based.py
eval_script/: convert_model.py  (+7 more)
verl-tool/: .gitignore  README.md  convert_model.py  keeper.sh  pyproject.toml  run_when_gpu_free.py
verl-tool/benchmarks/bigcodebench/: .gitignore  ADVANCED_USAGE.md  README.md
verl-tool/benchmarks/evalplus/: README.md
verl-tool/benchmarks/math-evaluation-harness/: .gitignore  README.md  data_loader.py  evaluate.py  math_eval.py  math_eval_sglang.py  parser.py  setup.sh  trajectory.py  utils.py
verl-tool/data_shengcheng/: concurrent_generate.py  demo.py
verl-tool/eval_service/: app.py  config.py  model_service.py  model_service_old.py  model_service_yt.py
verl-tool/eval_service/scripts/: start_api_service.sh  start_textbrowser_api_service.sh  (+1 more)
(+191 files in other folders)
